# universal-dev-skills

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  pyproject.toml
.copilot/: README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: prettier.yml
agents/: dev.agent.md
agents/vscode/: dev.agent.md  universal-dev.agent.md
docs/: claude-code.md  cursor.md  opencode.md  vscode-copilot.md  windsurf.md
hooks/: __init__.py  enforce-tool-usage.json  enforce-tool-usage.sh  enforce_tool_usage.py  tool-usage-rules.json
instructions/: copilot-instructions.md
scripts/: setup.py
skills/_shared/: telemetry.md
skills/bdd-feedback-loop/: SKILL.md
skills/bdd-feedback-loop/references/: csharp.md  java.md  python.md  typescript.md
skills/bdd-testing/: SKILL.md
skills/bdd-testing/references/: csharp.md  java.md  python.md  test-patterns.md  typescript.md
skills/bdd-testing/scripts/: rewrite_what_clauses.py
skills/bug-fix-workflow/: SKILL.md
skills/bug-fix-workflow/steps/: 01-reproduction-steps.md  02-failing-test.md  (+3 more)
skills/code-quality-antipatterns/: SKILL.md
skills/code-quality-audit/: SKILL.md
skills/conventional-commits/: SKILL.md
skills/csharp-code-standards/: SKILL.md
skills/feature-workflow/: SKILL.md
skills/java-code-standards/: SKILL.md
skills/plan-updates/: SKILL.md
skills/python-code-standards/: SKILL.md
skills/refactor-workflow/: SKILL.md
skills/skill-compliance/: SKILL.md
skills/telemetry/: SKILL.md
skills/templates/: SKILL.md
skills/tool-usage/: SKILL.md
skills/typescript-code-standards/: SKILL.md
tests/: __init__.py  test_enforce_tool_usage.py
(+31 files in other folders)
